Bug 977089 - Don't pass ID3 headers to GStreamer. r=cpearce, a=lsblakk