content/media/gstreamer/GStreamerReader.cpp
@@ -68,6 +68,7 @@ typedef enum {
 GStreamerReader::GStreamerReader(AbstractMediaDecoder* aDecoder)
   : MediaDecoderReader(aDecoder),
   mMP3FrameParser(aDecoder->GetResource()->GetLength()),
+  mDataOffset(0),
   mUseParserDuration(false),
 #if GST_VERSION_MAJOR >= 1
   mAllocator(nullptr),
@@ -238,7 +239,7 @@ void GStreamerReader::PlayBinSourceSetup(GstAppSrc* aSource)
   resource->Seek(SEEK_SET, 0);
 
   /* now we should have a length */
-  int64_t resourceLength = resource->GetLength();
+  int64_t resourceLength = GetDataLength();
   gst_app_src_set_size(mSource, resourceLength);
   if (resource->IsDataCachedToEndOfResource(0) ||
       (resourceLength != -1 && resourceLength <= SHORT_FILE_SIZE)) {
@@ -287,9 +288,26 @@ nsresult GStreamerReader::ParseMP3Headers()
 
   if (mMP3FrameParser.IsMP3()) {
     mLastParserDuration = mMP3FrameParser.GetDuration();
+    mDataOffset = mMP3FrameParser.GetMP3Offset();
+
+    // Update GStreamer's stream length in case we found any ID3 headers to
+    // ignore.
+    gst_app_src_set_size(mSource, GetDataLength());
   }
 
   return NS_OK;
+}
+
+int64_t
+GStreamerReader::GetDataLength()
+{
+  int64_t streamLen = mDecoder->GetResource()->GetLength();
+
+  if (streamLen < 0) {
+    return streamLen;
+  }
+
+  return streamLen - mDataOffset;
 }
 
 nsresult GStreamerReader::ReadMetadata(MediaInfo* aInfo,
@@ -800,7 +818,7 @@ nsresult GStreamerReader::GetBuffered(dom::TimeRanges* aBuffered,
 
     double end = (double) duration / GST_MSECOND;
     LOG(PR_LOG_DEBUG, "complete range [0, %f] for [0, %li]",
-          end, resource->GetLength());
+          end, GetDataLength());
     aBuffered->Add(0, end);
     return NS_OK;
   }
@@ -829,7 +847,7 @@ nsresult GStreamerReader::GetBuffered(dom::TimeRanges* aBuffered,
     double start = (double) GST_TIME_AS_USECONDS (startTime) / GST_MSECOND;
     double end = (double) GST_TIME_AS_USECONDS (endTime) / GST_MSECOND;
     LOG(PR_LOG_DEBUG, "adding range [%f, %f] for [%li %li] size %li",
-          start, end, startOffset, endOffset, resource->GetLength());
+          start, end, startOffset, endOffset, GetDataLength());
     aBuffered->Add(start, end);
   }
 
@@ -933,6 +951,8 @@ gboolean GStreamerReader::SeekDataCb(GstAppSrc* aSrc,
 
 gboolean GStreamerReader::SeekData(GstAppSrc* aSrc, guint64 aOffset)
 {
+  aOffset += mDataOffset;
+
   ReentrantMonitorAutoEnter mon(mGstThreadsMonitor);
   MediaResource* resource = mDecoder->GetResource();
   int64_t resourceLength = resource->GetLength();
@@ -941,7 +961,7 @@ gboolean GStreamerReader::SeekData(GstAppSrc* aSrc, guint64 aOffset)
     /* It's possible that we didn't know the length when we initialized mSource
      * but maybe we do now
      */
-    gst_app_src_set_size(mSource, resourceLength);
+    gst_app_src_set_size(mSource, GetDataLength());
   }
 
   nsresult rv = NS_ERROR_FAILURE;
